--- a/package.json
+++ b/package.json
@@ -1,12 +1,26 @@
 {
+  "name": "la_alegria_de_vivir",
+  "version": "1.0.0",
+  "description": "",
+  "type": "module",
+  "main": "index.js",
+  "scripts": {
+    "dev": "nodemon api/index.js",
+    "start": "node api/index.js",
+    "build": "npm install && npm install --prefix client && npm run build --prefix client"
+  },
+  "keywords": [],
+  "author": "",
+  "license": "ISC",
   "dependencies": {
     "bcrypt": "^5.1.1",
+    "bcryptjs": "^2.4.3",
+    "cookie-parser": "^1.4.6",
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
     "express-rate-limit": "^7.2.0",
     "jsonwebtoken": "^9.0.2",
-    "mongoose": "^8.3.3",
-    "nodemon": "^3.1.0",
-    "validator": "^13.11.0"
+    "mongoose": "^8.3.2",
+    "nodemon": "^3.1.0"
   }
 }
