--- a/package.json
+++ b/package.json
@@ -23,7 +23,8 @@
     "express-rate-limit": "^7.2.0",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.3.2",
-    "nodemon": "^3.1.0"
+    "nodemon": "^3.1.0",
+    "slugify": "^1.6.6"
   },
   "devDependencies": {
     "@babel/core": "^7.24.6",
